dino following car, trying to solve jumping error

--- a/styles/style.css
+++ b/styles/style.css
@@ -16,9 +16,10 @@
     width: 100px;
 }
 
-#game-board {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin: 50px;
+
+
+#canvas {
+    width: 100%;
+    margin-top: 50px;
+
 }
